After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 127411 - grid outline in a graph does not work
grid outline in a graph does not work
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: Charting
1.2.x
Other Linux
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2003-11-19 17:41 UTC by Frederic Parrenin
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Screenshot of gnumeric showing the problem. (47.22 KB, image/png)
2003-11-20 15:15 UTC, Frederic Parrenin
Details

Description Frederic Parrenin 2003-11-19 17:41:00 UTC
If you set the grid outline of a chart to something >1 in a graph (for
example an XY graph), it has no effect.
Comment 1 Frederic Parrenin 2003-11-20 15:15:10 UTC
Created attachment 21653 [details]
Screenshot of gnumeric showing the problem.
Comment 2 Frederic Parrenin 2003-11-20 15:19:01 UTC
Sorry, I wanted to add this screenshot to bug 127410.
Please forget it.
Comment 3 Jody Goldberg 2004-04-20 04:34:17 UTC
trivial fix.  Patch will be in 1.2.12.