http://bugzilla.gnome.org/show_bug.cgi?id=127411 render the style.

2004-04-19  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=127411
	* graph/gog-chart.c (gog_chart_view_render) : render the style.

2004-04-19  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=135949
	* ms-chart.c (BC_R(end)) : graph style wants outline not line
	(ms_excel_read_chart) : there is not 'Graph' concept in xls, remove
	  it's style.  Charts default to blank too.