src/cut-n-paste-code/goffice/graph/gog-chart.c
@@ -592,6 +592,8 @@ gog_chart_view_render (GogView *view, GogViewAllocation const *bbox)
 	GogView *child;        
 	gboolean clipped = FALSE;        
 	
+	(cview_parent_klass->render) (view, bbox);
+
 	for (ptr = view->children; ptr != NULL ; ptr = ptr->next) {                
 		child = ptr->data;                
 		/* All plots overlay the same region, simplify life                 
